# fast-api-sms

./: .gitignore  hello.py  pyproject.toml  seeting.txt
apps/: catalogs.py  courses.py  users.py
