[tool.poetry]
name = "fastcrash"
version = "0.1.0"
description = ""
authors = ["Christian Sunday <potentialsunny47@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.18.2"
fastapi = "^0.80.0"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
